--- a/mau-hinh.html
+++ b/mau-hinh.html
@@ -69,9 +69,19 @@
                 <div>
                     <h1 class="font-bold text-slate-800 dark:text-white text-base leading-tight">Trading Journal</h1>
                     <p class="text-[10px] text-slate-400 dark:text-slate-500 font-medium">Professional Tracker</p>
+                    
                 </div>
+
             </div>
-            
+            <div class="flex items-center gap-3">
+                <a href="./index.html" class="inline-block px-6 py-2.5 bg-green-100 text-green-700 font-semibold rounded-md hover:bg-green-200 hover:text-green-800 transition duration-300 border border-green-200">
+  Nhập liệu
+</a>
+<a href="./thong-ke.html" class="inline-block px-8 py-3 bg-gradient-to-r from-green-400 to-emerald-600 text-white font-bold rounded-full shadow-lg shadow-green-500/50 hover:from-green-500 hover:to-emerald-700 transition-all duration-300 hover:shadow-xl hover:shadow-green-500/40">
+  Thống kê
+</a>
+
+            </div>
             <div class="flex gap-2">
                 <button onclick="toggleTheme()" class="w-9 h-9 rounded-full bg-slate-50 dark:bg-slate-700 text-slate-500 dark:text-yellow-400 hover:bg-slate-100 dark:hover:bg-slate-600 transition flex items-center justify-center border border-slate-200 dark:border-slate-600">
                     <i id="theme-icon" class="fa-solid fa-moon"></i>
