--- a/thong-ke.html
+++ b/thong-ke.html
@@ -97,10 +97,19 @@
                     <div class="flex items-center gap-2 text-xs font-mono text-zinc-500 dark:text-zinc-400">
                         <span class="bg-zinc-200 dark:bg-zinc-800 px-1.5 py-0.5 rounded text-green-600 dark:text-green-400 font-bold">WIN > 10</span>
                         <span class="bg-zinc-200 dark:bg-zinc-800 px-1.5 py-0.5 rounded text-zinc-500 dark:text-zinc-400 font-bold">BE 0-10</span>
+                         <a href="./index.html" class="inline-block px-6 py-2.5 bg-green-100 text-green-700 font-semibold rounded-md hover:bg-green-200 hover:text-green-800 transition duration-300 border border-green-200">
+  Nhập liệu
+</a>
+<a href="./mau-hinh.html" class="inline-block px-8 py-3 bg-gradient-to-r from-green-400 to-emerald-600 text-white font-bold rounded-full shadow-lg shadow-green-500/50 hover:from-green-500 hover:to-emerald-700 transition-all duration-300 hover:shadow-xl hover:shadow-green-500/40">
+  Mẫu hình
+</a>
                     </div>
+                    
                 </div>
             </div>
+
             <p class="text-align-center text-zinc-400 text-3lx dark:text-emerald-200">Muốn hái trái ngọt <i class="fa-solid fa-plant-wilt"></i> thì phải <i class="fa-solid fa-person-digging"></i></p>
+            
             <div class="flex items-center gap-3">
                  <button onclick="toggleTheme()" class="glass-card w-11 h-11 rounded-xl text-yellow-500 hover:text-white hover:bg-yellow-500 dark:text-zinc-400 dark:hover:text-white dark:hover:bg-zinc-700 transition flex items-center justify-center shadow-lg active:scale-95">
                     <i id="theme-icon" class="fa-solid fa-moon"></i>
