--- a/thong-ke.html
+++ b/thong-ke.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minh Trị Duy Tân</title>
+    <title>Trading Journal Pro</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=JetBrains+Mono:wght@500;700&display=swap" rel="stylesheet">
@@ -97,6 +97,12 @@
                     <div class="flex items-center gap-2 text-xs font-mono text-zinc-500 dark:text-zinc-400">
                         <span class="bg-zinc-200 dark:bg-zinc-800 px-1.5 py-0.5 rounded text-green-600 dark:text-green-400 font-bold">WIN > 10</span>
                         <span class="bg-zinc-200 dark:bg-zinc-800 px-1.5 py-0.5 rounded text-zinc-500 dark:text-zinc-400 font-bold">BE 0-10</span>
+                        <a href="./index.html" class="inline-block px-6 py-2.5 bg-green-100 text-green-700 font-semibold rounded-md hover:bg-green-200 hover:text-green-800 transition duration-300 border border-green-200">
+  Nhập liệu
+</a>
+<a href="./mau-hinh.html" class="inline-block px-8 py-3 bg-gradient-to-r from-green-400 to-emerald-600 text-white font-bold rounded-full shadow-lg shadow-green-500/50 hover:from-green-500 hover:to-emerald-700 transition-all duration-300 hover:shadow-xl hover:shadow-green-500/40">
+  Mẫu hình
+</a>
                     </div>
                 </div>
             </div>
